fix: fix x overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,11 @@
   --color-accent-pressed: #1A7FFF
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 body {
   background: var(--background-white);
   color: var(--grey-txt-primary);
